2009-01-22  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/ProjectService.cs:
	* MonoDevelop.Projects.Extensions/ItemPropertyCodon.cs:
	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs: Added
	support for SkipEmpty in the serializer. When set to true for a
	property, if the element generated by the property is empty, it will
	not be serialized.

2009-01-21  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs: Fix
	NRE.

2009-01-21  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs:
	Specially handle SolutionItem.Policies, since the default MSBuild
	serialisation ignores it.

2009-01-21  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects.Dom/DomType.cs: Use a (faster) ordinal compare
	when searching for members.

2009-01-21  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Projects/Solution.cs:
	* MonoDevelop.Projects/SolutionItem.cs: Add Policies properties to
	Solution and SolutionItem.

	* MonoDevelop.Projects/DotNetProject.cs: Use new DotNetNamingPolicy for
	default namespaces of new files. Implement support for hierachical
	directory-based namespaces, and for using the default namespace as a
	prefix.

	* MonoDevelop.Projects.Policies: Added.

	* MonoDevelop.Projects.Policies/PolicyBag.cs:
	* MonoDevelop.Projects.Policies/PolicySet.cs:
	* MonoDevelop.Projects.Policies/PolicyService.cs: Implement cascading
	per-project policy infrastructure with sets of named policies.

	* MonoDevelop.Projects.Policies/DotNetNamingPolicy.cs: Add a policy type
	for defining directory-namespace relations and resource naming
	styles.

	* MonoDevelop.Projects.addin.xml:
	* MonoDevelop.Projects.Extensions/PolicyNode.cs:
	* MonoDevelop.Projects.Extensions/PolicySetNode.cs: Added new policy and
	policy type extension points.

	* Makefile.am:
	* MonoDevelop.Projects.mdp: Updated.
