@@ -359,7 +359,7 @@ namespace MonoDevelop.Projects
 			}
 		}
 		
-		[ItemProperty ("Policies", IsExternal = true)]
+		[ItemProperty ("Policies", IsExternal = true, SkipEmpty = true)]
 		public MonoDevelop.Projects.Policies.PolicyBag Policies {
 			get { return RootFolder.Policies; }
 			//this is for deserialisation
