@@ -1,3 +1,11 @@
+2009-01-21  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* md1format.xml:
+	* MonoDevelop.Projects/Solution.cs:
+	* MonoDevelop.Projects/SolutionItem.cs:
+	* MonoDevelop.Projects.Formats.MSBuild/MSBuildProjectHandler.cs: Fix
+	policy serialisation for MD and MSBuild projects.
+
 2009-01-22  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* MonoDevelop.Projects/ProjectService.cs:
